hphp/test/slow/class-ptr/as-class.php.expectf

Fatal error: "is" and "as" operators cannot be used with a class type in %s/class-ptr/as-class.php on line 7
